--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "dicilo.net-company",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -10,16 +10,17 @@
   },
   "dependencies": {
     "react": "18.2.0",
-    "react-dom/client": "18.2.0",
     "react-dom": "18.2.0",
     "i18next": "23.11.5",
-    "react-i18next": "14.1.2?external=react",
+    "react-i18next": "14.1.2",
     "i18next-browser-languagedetector": "8.0.0",
     "i18next-http-backend": "2.5.2",
     "@google/genai": "0.14.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
+    "@types/react": "^18.2.27",
+    "@types/react-dom": "^18.2.11",
     "typescript": "~5.7.2",
     "vite": "^6.2.0"
   }
