--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,6 @@
+// vercel.json
 {
-  "cleanUrls": false,
+  "cleanUrls": true,
   "rewrites": [
     { "source": "/prices", "destination": "/prices.html" },
     { "source": "/client", "destination": "/client.html" },
